2005-04-10  Alex Roitman  <shura@gramps-project.org>
	* Release: Version 1.1.95 "When danger reared its ugly head,
	he bravely turned his tail and fled" released.
	* configure.in: Bump up the version number.

2005-04-10  Alex Roitman  <shura@gramps-project.org>
	* NEWS: Update.

2005-04-10  Don Allingham  <don@gramps-project.org>
	* src/EventEdit.py: Add new places to the database.
	* src/Check.py: repair family types of "None" in the database
	* src/Makefile.am: add MergePeople.py

2005-04-09  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: ignore None family types. This should never
	occur, but we want to be safe.

2005-04-09  Alex Roitman  <shura@gramps-project.org>
	* src/po/template.po: Update translation template.

2005-04-09  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsDBCallback.py: block recursive signal calls, improved error 
	reporting. All warnings are now printed to stderr even if logging 
	is turned off.
	
2005-04-08  Don Allingham  <don@gramps-project.org>
        * src/AddMedia.py: pychecker changes
	* src/ChooseParents.py: pychecker changes
	* src/DdTargets.py: pychecker changes
	* src/FamilyView.py: pychecker changes
	* src/GrampsCfg.py: pychecker changes
	* src/MergeData.py: pychecker changes
	* src/MergePeople.py: pychecker changes
	* src/NameEdit.py: pychecker changes
	* src/NoteEdit.py: pychecker changes
	* src/RelLib.py: pychecker changes
	* src/gramps_main.py: pychecker changes
	* src/GrampsDbBase.py: correctly handle signals when undoing a
	delete operation
	* src/PeopleView.py: remove unused signal
	* src/gramps_main.py: handle history mechanism with new signal scheme,
	avoiding the double active-changed when selecting an element

2005-04-08  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Utils.py (probably_alive): Added two more checks for birth and death year

	* src/gramps_main.py: Added "Invert" checkbox for person filter;
	 Fix "active-changed" signals to not cause Tracebacks.